Update how_to_config_JVM.md